fix twitter alignment with margin:auto

--- a/blog/themes/3mdeb/static/css/bulma.css
+++ b/blog/themes/3mdeb/static/css/bulma.css
@@ -11061,3 +11061,9 @@ img.social-icon {
   }
 
 }
+
+.twitter-tweet-rendered {
+  display:block;
+  margin-left:auto;
+  margin-right:auto;
+}
